--- a/packages/react-scripts/template/src/App.scss
+++ b/packages/react-scripts/template/src/App.scss
@@ -1,10 +1,10 @@
-@import './style/helpers'
+@import './style/helpers';
 
 .App {
   text-align: center;
 }
 
-.App-logo {
+.App-logo svg {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
