Read OpenGraph from content index and provide it to htmlWebpackPlugin as env variables

--- a/packages/react-scripts/template/public/index.html
+++ b/packages/react-scripts/template/public/index.html
@@ -20,6 +20,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!--
+      PUDING: OpenGraph data
+    -->
+    <meta name="og:title" href="%OPENGRAPH_TITLE%">
+    <meta name="og:description" href="%OPENGRAPH_DESCRIPTION%">
+    <meta name="og:image" href="%OPENGRAPH_IMAGE%">
   </head>
   <body>
     <noscript>
